--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="decription" content="CV de Jairo Sandoval Elías">
+    <meta name="keywords" content="CV, USAT, SISTEMAS">
+    <meta name="author" content="Jairo Sandoval Elías">
+
+    <title>Jairo Sandoval Elías</title>
 </head>
 <body>
-    
+
+    <h1>Jairo Sandoval Elías</h1>
+
+    <a href="#perfil"> Perfil</a> <br>
+    <a href="#experiencia"> Experiencia Profesional</a> <br>
+    <a href="#habilidades"> Habilidades y Conocimientos</a> <br>
+    <a href="#educación"> Educación</a> <hr>
+
+    <ul>
+
+        <li><strong>Ciudad:</strong> Chiclayo</li>
+        <li><strong>Teléfono:</strong> 922358798</li>
+        <li><strong>Fecha de Nacimiento:</strong> 15/07/2002</li>
+        <li><strong>Email:</strong> jairopoke01@gmail.com</li>
+
+    </ul> <hr>
+
+    <h2 id="perfil">Perfil</h2>
+    <p>
+        Profesional dedicado al Área de Sistemas, con amplia experiencia en cursos de educación superior y universitaria como:
+        Análisis y Diseño de Sitemas, Administración de Base de Datos y Cursos de Informática Básica. Presento gran facilidad
+        para el trabajo en equipo y bajo presión, gran responsabilidad y amplio dominio en varios programas de aplicación como
+        de programación, software educativo, de diseño web y diseño gráfico.
+
+    </p> <hr>
+
+    <h2 id="experiencia">Experiencia Profesional</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>EMPRESA/ORGANIZACIÓN</th>
+                <th>CARGO</th>
+                <th>LOCALIZACIÓN</th>
+                <th>DESDE - HASTA</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Usat</td>
+                <td>Coordinador Acádemico de Sistemas</td>
+                <td>Chiclayo</td>
+                <td>Febrero 2018 - Actualidad</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>Usat</td>
+                <td>Unidad de Educación a distancia</td>
+                <td>Chiclayo</td>
+                <td>Octubre 2016 - Diciembre 2017</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>UNPRG</td>
+                <td>Docente</td>
+                <td>Lambayeque</td>
+                <td>Marzo 2009 - Diciembre 2009</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>Instituto UNPRG</td>
+                <td>Docente</td>
+                <td>Chiclayo</td>
+                <td>Enero 2006 - Diciembre 2007</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>Instituto ÁBACO</td>
+                <td>Docente</td>
+                <td>Chiclayo</td>
+                <td>Enero 1999 - Setiembre 2007</td>
+            </tr>
+        </tbody>
+    </table> <hr>
+
+    <h2 id="habilidades"> Habilidades y Conocimientos</h2>
+
+    <ul>
+        <li><strong>Desarrollo Web:</strong> HTML5, CSS3, JavaScript, MySQL, Responsive Design, WordPress</li>
+        <li><strong>Análitica Web/Métricas:</strong> Google Analytics, Mixpanel</li>
+        <li><strong>Emprendimiento:</strong> Startups, Learn Startup</li>
+        <li><strong>Aplicaciones Ofimáticas:</strong> Microsoft Office, LibreOffice</li>
+        <li><strong>Marketing:</strong> Email Marketing, Redes Sociales, Gramificación</li>
+    </ul> <hr>
+
+    <h2 id="educación">Otros Cursos</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>TÍTULO</th>
+                <th>ENTIDAD</th>
+                <th>CONDICIÓN</th>
+                <th>AÑO</th>
+            </tr>
+
+            <tbody>
+                <td>Diseño de Materiales para Learning</td>
+                <td>UTN.BA</td>
+                <td>Estudiante</td>
+                <td>2016</td>
+            </tbody>
+
+            <tbody>
+                <td>Diplomado de Gerencia de Proyectos - Bajo el enfoque PMI 2da Edición</td>
+                <td>USAT</td>
+                <td>Ponente</td>
+                <td>2015</td>
+            </tbody>
+
+            <tbody>
+                <td>Curso de Formación Permanente en Gestión del Aula Virtual Basada en la Plataforma Moodle</td>
+                <td>USAT</td>
+                <td>Estudiante</td>
+                <td>2013</td>
+            </tbody>
+
+            <tbody>
+                <td>Cursos de Microsoft Excel</td>
+                <td>USAT</td>
+                <td>Ponente</td>
+                <td>Actualidad</td>
+            </tbody>
+
+            <tbody>
+                <td>SPSS Avanzado</td>
+                <td>INEI</td>
+                <td>Estudiante</td>
+                <td>2006</td>
+            </tbody>
+        </thead>
+    </table>
 </body>
 </html>
