--- a/index2.html
+++ b/index2.html
@@ -11,9 +11,9 @@
 
     <title>Jairo Sandoval Elías</title>
 </head>
-<body>
+<body style="background-color: rgb(239, 248, 248);">
 
-    <h1>Jairo Sandoval Elías</h1>
+    <h1 style="color: rgb(30, 123, 210); text-align: center;border: 1px solid #995959;">Jairo Sandoval Elías</h1>
 
     <a href="#perfil"> Perfil</a> <br>
     <a href="#experiencia"> Experiencia Profesional</a> <br>
@@ -29,7 +29,7 @@
 
     </ul> <hr>
 
-    <h2 id="perfil">Perfil</h2>
+    <h2 id="perfil;" style="color: rgb(84, 216, 150);">Perfil</h2>
     <p>
         Profesional dedicado al Área de Sistemas, con amplia experiencia en cursos de educación superior y universitaria como:
         Análisis y Diseño de Sitemas, Administración de Base de Datos y Cursos de Informática Básica. Presento gran facilidad
@@ -38,10 +38,16 @@
 
     </p> <hr>
 
-    <h2 id="experiencia">Experiencia Profesional</h2>
+    <h2 id="experiencia;" style="color: rgb(84, 216, 150)">Profesional</h2>
 
     <table>
         <thead>
+            <style>
+                th {
+                    color: darkorchid;
+                }
+
+            </style>
             <tr>
                 <th>EMPRESA/ORGANIZACIÓN</th>
                 <th>CARGO</th>
@@ -96,7 +102,7 @@
         </tbody>
     </table> <hr>
 
-    <h2 id="habilidades"> Habilidades y Conocimientos</h2>
+    <h2 id="habilidades;" style="color: rgb(84, 216, 150);"> Habilidades y Conocimientos</h2>
 
     <ul>
         <li><strong>Desarrollo Web:</strong> HTML5, CSS3, JavaScript, MySQL, Responsive Design, WordPress</li>
@@ -106,7 +112,7 @@
         <li><strong>Marketing:</strong> Email Marketing, Redes Sociales, Gramificación</li>
     </ul> <hr>
 
-    <h2 id="educación">Otros Cursos</h2>
+    <h2 id="educación;" style="color: rgb(84, 216, 150);">Otros Cursos</h2>
 
     <table>
         <thead>
