--- a/SESIÓN 12/index.html
+++ b/SESIÓN 12/index.html
@@ -11,35 +11,39 @@
 </head>
 <body>
 
-    <div id="Contenedor">
-        <h2 style="text-align: center;"> Encuesta de Cine: Nominados al Óscar 2021</h2>
+    <div id="Contenedor" style="width: 800px;">
 
-        <h2> <img src="IMG/Google_Forms.png" alt="Foto"></h2>
+        <h2 style="text-align: center;"> Encuesta de Cine: Nominados al Óscar 2021
 
+            <img src="IMG/premios_oscar.jpg" alt="premios_oscar" width="120" height="40" align=left>
+            <img src="IMG/premios_oscar.jpg" alt="premios_oscar" width="120" height="40" align=right>
+
+        </h2><br>
+        
         <form id="formulario1" name="formulario1" method="POST" action="data.php"></form>
             <fieldset id="datos_personales">
 
                 <legend>Datos Personales</legend>
 
-                <label for="nombre">Nombre:</label>
+                <label for="nombre">Nombre:</label><br>
                 <input type="text" name="nombre" id="nombre"> <br>
 
-                <label for="apellidos">Apellidos:</label>
+                <label for="apellidos">Apellidos:</label><br>
                 <input type="text" name="apellidos" id="apellidos"> <br>
 
-                <label for="dni">Dni:</label>
+                <label for="dni">Dni:</label><br>
                 <input type="text" name="dni" id="dni" maxlength="9"> <br>
 
-                <label for="edad">Edad:</label>
+                <label for="edad">Edad:</label><br>
                 <input type="text" name="edad" id="edad" maxlength="2" size="2"> <br>
 
-                <label for="sexo">Sexo:</label>
+                <label for="sexo">Sexo:</label><br>
                 <select name="sexo" id="sexo">
                     <option value="value1">Masculino</option>
                     <option value="value2">Femenino</option>
                 </select>
 
-            </fieldset>
+            </fieldset> <br>
 
 
             <fieldset id="mejor_pelicula">
@@ -50,7 +54,7 @@
                 <input type="radio" name="pelicula" value="22">P02<br>
                 <input type="radio" name="pelicula" value="33">P03<br>
 
-            </fieldset>
+            </fieldset><br>
 
             <fieldset id="peliculas_vistas">
 
@@ -60,7 +64,7 @@
                 <input type="checkbox" name="pelicula" >P02<br>
                 <input type="checkbox" name="pelicula" >P03<br>
 
-            </fieldset>
+            </fieldset> <br>
 
             <fieldset id="grupo_argumento">
 
