--- a/SESIÓN 12/registro_usuario.html
+++ b/SESIÓN 12/registro_usuario.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-    <div id="Contenedor" style="text-align: center;  width: 450px;"  >
+    <div id="Contenedor" style="text-align: center;  width: 450px; background: mediumaquamarine;">
 
-        <h2 style="text-align: center;"><strong>Nuevo Usuario</strong></h2>
+        <h2 style="text-align: center; color: rgb(34, 76, 189);"><strong>REGISTRO DE USUARIO</strong></h2>
 
         <form id="formulario" name="formulario" method="POST" action="data.php"></form>
     
             <input type="button" value="Registro con Facebook"> <input type="button" value="Registro con Google"><br>
             <br>
 
-            <label for="registro">O registrarse con:</label><br>
+            <label for="registro"><strong>O registrarse con:</strong></label><br>
             <br>
 
             <input type="text" name="nombre" id="nombre" placeholder="Nombres"> <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos"><br>
@@ -30,12 +30,10 @@
             <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"><br>
             <br>
 
-            <input type="checkbox" name="crear_cuenta" id="crear_cuenta"> Al crear esta cuenta, acepta nuestros <strong>Términos y Servicios</strong><br>
+            <input type="checkbox" name="crear_cuenta" id="crear_cuenta"> Al crear esta cuenta, acepta nuestros <strong>Términos y Condiciones</strong><br>
             <br>
 
-            <input type="submit" value="Enviar">
-
-        
+            <input type="submit" value= "Enviar">
     </div> 
 </body>
 </html>
